--- a/src/template/Vagrantfile
+++ b/src/template/Vagrantfile
@@ -4,6 +4,7 @@
 # Vagrantfile API/syntax version. Don't touch unless you know what you're doing!
 VAGRANTFILE_API_VERSION = "2"
 BOX_IMAGE="centos/7"
+BOX_VERSION="1905.1"
 
 required_plugins = %w(vagrant-vbguest vagrant-share)
 
@@ -25,6 +26,7 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
   # template image
   config.vm.define "template" do |template|
     template.vm.box = BOX_IMAGE
+    template.vm.box_version = BOX_VERSION
     template.vm.network :private_network, ip:"192.168.100.99"
     template.vm.network :forwarded_port, guest: 22, host: 22199, id: 'ssh'  
     template.vm.hostname = 'template.local'
