--- a/src/template/Vagrantfile
+++ b/src/template/Vagrantfile
@@ -3,8 +3,8 @@
 
 # Vagrantfile API/syntax version. Don't touch unless you know what you're doing!
 VAGRANTFILE_API_VERSION = "2"
-BOX_IMAGE="centos/7"
-BOX_VERSION="1905.1"
+BOX_IMAGE="ubuntu/bionic64"
+BOX_VERSION="20191115.0.0"
 
 required_plugins = %w(vagrant-vbguest vagrant-share)
 
